@startuml ZooSimulatorEconomy
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Economy

class ZooSimulationService {
  +Cash : decimal
  +MeatStockKg : decimal
  +SeedsStockKg : decimal
  +BuyAnimal() : bool
  +SellAnimal() : bool
  +BuyHabitat() : bool
  +SellHabitat() : bool
  +BuyFood() : bool
  +CollectVisitorRevenue() : decimal
}

package "Domain.Feeding" {
  class FoodMarket {
    +Buy(type : FoodType, kg : decimal) : decimal
    +PricePerKg(type : FoodType) : decimal
  }

  enum FoodType {
    Meat
    Seeds
  }
}

package "Domain.Finance" {
  class AnimalMarket {
    +BuyAnimalPrice(species, sex, ageDays) : decimal
    +SellAnimalPrice(species, sex, ageDays) : decimal
  }

  class Ledger {
    +Transactions : IReadOnlyList<Transaction>
    +Add(transaction : Transaction) : void
  }

  class Transaction {
    +TimestampUtc : DateTime
    +Amount : decimal
    +Description : string
    +Category : string
    +BalanceAfter : decimal
  }
}

package "Domain.Visitors" {
  class VisitorFlow {
    +GetVisitorsPerAnimal(species, isHighSeason) : decimal
  }

  class VisitorPricing {
    +AdultTicketPrice : decimal
    +ChildTicketPrice : decimal
    +GroupRevenue : decimal
  }

  class VisitorRevenueCalculator {
    +CalculateBySpecies(exposedAnimals, isHighSeason) : IReadOnlyDictionary
  }
}

ZooSimulationService *-- Ledger
ZooSimulationService --> FoodMarket
ZooSimulationService --> AnimalMarket
ZooSimulationService --> VisitorRevenueCalculator
ZooSimulationService --> FoodType

Ledger o-- "0..*" Transaction
VisitorRevenueCalculator --> VisitorFlow
VisitorRevenueCalculator --> VisitorPricing

note bottom
Economy flows covered by the simulation:
- animal buy / sell
- habitat buy / sell
- food purchase
- visitor revenue by season
- annual protected-species subsidy
end note
@enduml
